# AdventofCode

./: .gitignore  README.md
2022/: README.md
2022/Haskell/day-01-a/: day01-a.cabal
2022/Haskell/day-01-a/src/: Main.hs
2022/Haskell/day-01-b/: day01-b.cabal
2022/Haskell/day-01-b/src/: Main.hs
2022/Haskell/day-02-a/src/: Main.hs
2022/Haskell/day-02-b/src/: Main.hs
2022/Haskell/day-03-a/: day03-a.cabal
2022/Haskell/day-03-a/src/: Main.hs
2022/Haskell/day-03-b/: day03-b.cabal
2022/Haskell/day-03-b/src/: Main.hs
2023/: README.md
2023/Haskell/day-01-a/src/: Main.hs
2023/Haskell/day-01-b/src/: Main.hs
2023/Haskell/day-01/a/: main.hs
2023/Rust/day-01-a/src/: main.rs
2023/Rust/day-01-b/src/: main.rs
2023/Rust/day-01/a/: Cargo.toml
2023/Rust/day-01/b/: Cargo.toml
2023/Rust/day-02-a/src/: main.rs
2023/Rust/day-02-b/: Cargo.toml
2023/Rust/day-02-b/src/: main.rs
2023/Rust/day-02/a/: Cargo.toml
2023/Rust/day-03-a/: Cargo.toml
2023/Rust/day-03-a/src/: main.rs
2023/Rust/day-05-a/: Cargo.toml
2023/Rust/day-07-a/: Cargo.toml
2023/Rust/day-08-b/: Cargo.toml
2023/Rust/day-09-a/: Cargo.toml
2023/Rust/day-09-b/: Cargo.toml
2023/day-1/a/src/: main.rs
2024/: README.md
2024/Haskell/day-02-a/: day02-a.cabal
2024/Haskell/day-02-a/src/: Main.hs
2024/Haskell/day-02-b/: day02-b.cabal
2024/Haskell/day-04-a/: day04-a.cabal
2024/Haskell/day-04-b/: day04-b.cabal
2024/Haskell/day-05-a/: day05-a.cabal
2024/Rust/day-06-a/: Cargo.toml
2024/Rust/day-06-b/: Cargo.toml
2024/Rust/day-08-a/: Cargo.toml
2024/Rust/day-08-b/: Cargo.toml
(+62 files in other folders)
